<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gravity</string>
    <string name="edit_message">Enter a message</string>
    <string name="invite_message">Add user to friends list</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_chat_client">Gravity</string>
    <string name="host">Chat Host</string>
    <string name="port">Port</string>
    <string name="service">Service</string>
    <string name="userid">User</string>
    <string name="password">Password</string>
    <string name="save_settings">Save Settings</string>
    <string name="connecting">Connecting</string>
    <string name="app_id">145090645679404</string>
    <string name="group_name">Group name</string>
    <string name="group_fee">Group fee</string>
    <string name="group_add">Add group</string>
    <string name="logout">Logout</string>
    <string name="user_id">User email or phone#</string>
    <string name="user_name">Friend name or alias</string>
    <string name="user_group">Friend group</string>
    <string name="user_add">Add friend</string>
    <string name="edit_fees">Edit fees</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_credit">Credit</string>
    <string name="hello_world">Hello world!</string>
    <string name="your_credit">Your credit</string>
	<string name="credit">Credit</string>
	<string name="buy10">Buy 10 credits</string>
</resources>