<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_user"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/user_add"/>
    <item
        android:id="@+id/add_group"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/group_add"/>
    <item
        android:id="@+id/edit_fees"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/edit_fees"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/quit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_quit"/>

</menu>