<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/group_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_fee"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/group_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_add" />

</LinearLayout>